fix css index e começo do css login

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -11,22 +11,29 @@
     padding: 20px;
     width: 70vh;
 /* From https://css.glass */
-background: rgba(255, 255, 255, 0.24);
+background: rgba(41, 167, 217, 0.53);
 border-radius: 16px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(5.1px);
--webkit-backdrop-filter: blur(5.1px);
-border: 1px solid rgba(255, 255, 255, 0.23);
+backdrop-filter: blur(7.3px);
+-webkit-backdrop-filter: blur(7.3px);
+border: 1px solid rgba(41, 167, 217, 0.3);
 }
 
 body{
-    background-image: url(https://images.pexels.com/photos/1181352/pexels-photo-1181352.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
-    background-repeat: none;
-    background-size: 100%;
-}
+background-color: #0D0D0D;
+} 
+
+/* .divImg{
+    margin-top: 100px;
+} */
 
 form{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+}
+
+.btnRegister{
+    background-color: #458C57;
+    color: #fff;
 }
