--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,18 +2,24 @@
 
 *{
     font-family: 'Cabin';
+    padding: 0;
 }
 
 body{
     background-color: #1B1B1B;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .conteudo{
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 90vh;
-    padding: 0 20px 0 20px;
+    width: 80%;
+    padding-top: 50px;
 }
 
 img{
@@ -26,14 +32,17 @@ img{
     border-radius: 10px;
     height: 480px;
     width: 544px;
+    display: flex;
+    flex-direction: column;
 }
 
 .title{
     display: flex;
     justify-content: center;
     font-size: 50px;
-    /* padding-bottom: ; */
+    padding: 20px 0;
 }
+
 
 .campos{
     display: flex;
