--- a/public/css/login.css
+++ b/public/css/login.css
@@ -23,8 +23,7 @@ body{
 }
 
 img{
-    width: 90vh;
-    height: 100vh;
+    height: 500px;
 }
 
 .divForms{
@@ -39,10 +38,17 @@ img{
 
 /* ver gap */
 
+h1{
+    background: linear-gradient(to bottom, #CEDAF2, #9AB8F3);
+    -webkit-background-clip: text; /* Para navegadores baseados em WebKit */
+    background-clip: text;
+    color: transparent;
+    font-size: 50px;
+}
+
 .title{
     display: flex;
     justify-content: center;
-    font-size: 50px;
     padding: 20px 0;
 }
 
@@ -50,7 +56,7 @@ img{
 .campos{
     display: flex;
     flex-direction: column;
-    margin-bottom: 100px;
+    margin-top: 10px;
 }
 
 .inputs{
@@ -58,6 +64,8 @@ img{
     height: 50px;
     border: 1px solid transparent;
     border-radius: 10px;
+    margin-bottom: 25px;
+    background-color: #CEDAF2;
 }
 
 .formulario{
@@ -70,22 +78,47 @@ img{
 
 .titulosInputs{
     font-size: 20px;
+    margin-bottom: 0;
+    color: #2651A6;
 }
 
 .btnMsg{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 40px;
+    height: 100%;
 }
 
 .divMsg{
     height: 35px;
+    margin-top: 20px;
+}
+
+.divMsg a{
+    color: #4D5870;
     font-size: 20px;
-    padding:0 20px;
+    text-decoration: none;
 }
 
 .btn{
-    height: 40px;
+    font-size: 20px;
     width: 150px;
+    height: 40px;
+    margin-left: auto;
+    background-color: #2651A6;
+    color: #CEDAF2;
+    border: 1px solid transparent;
+}
+
+.btn:hover{
+    background-color: #CEDAF2;
+    color: #2651A6;
+    border: 1px solid transparent;
+}
+
+.divBtn{
+    display: flex;
+    justify-content: flex-end; /* Alinha os itens no final do container */
+    align-items: center; /* Alinha os itens verticalmente */
+    width: 439px;
 }
