--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,6 +8,7 @@
 body{
     background-color: #1B1B1B;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
@@ -29,7 +30,7 @@ img{
 .divForms{
     background-color: #668CD9;
     border-radius: 10px;
-    height: 480px;
+    min-height: 480px;
     width: 544px;
     display: flex;
     flex-direction: column;
@@ -92,6 +93,9 @@ h1{
 .divMsg{
     height: 35px;
     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .divMsg a{
@@ -121,4 +125,33 @@ h1{
     justify-content: flex-end; /* Alinha os itens no final do container */
     align-items: center; /* Alinha os itens verticalmente */
     width: 439px;
+}
+
+.menu{
+    height: 75px;
+    width: 100%;
+    background-color: #668CD9;
+}
+
+.menu ul{
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
+.menu li{
+    justify-content: space-between;
+    align-items: center;
+    list-style-type: none;
+    padding: 13px 20px 0 20px;
+}
+
+.menu li a{
+    text-decoration: none;
+    color: #CEDAF2;
+    font-size: 30px;
+}
+
+.menu li a:hover{
+    color: #082255;
 }
